# xm

./: AdsPower_Project_Specification.md
adspower-manager/: README.md
adspower-manager/backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
adspower-manager/backend/app/api/: auth.py  profiles.py  rpa.py  tasks.py  websocket.py
adspower-manager/backend/app/core/: cache.py  config.py  database.py  performance.py  security.py  security_enhanced.py
adspower-manager/backend/app/models/: __init__.py  profile.py  proxy.py  rpa.py  task.py  user.py
adspower-manager/backend/app/services/: adspower_client.py  monitoring.py  profile_service.py  rpa_engine.py  task_scheduler.py  websocket_manager.py
adspower-manager/docker/: Dockerfile.backend  Dockerfile.backend.prod  docker-compose.prod.yml  docker-compose.yml
adspower-manager/docker/nginx/: nginx.prod.conf
adspower-manager/docs/: USER_GUIDE.md
adspower-manager/frontend/: package.json
adspower-manager/frontend/src/: App.tsx
adspower-manager/frontend/src/components/RPADesigner/: NodePalette.css  NodePalette.tsx
adspower-manager/frontend/src/components/TaskMonitor/: TaskList.tsx
adspower-manager/frontend/src/hooks/: useAuth.ts  useWebSocket.ts
adspower-manager/frontend/src/services/: api.ts  authService.ts  rpaService.ts  taskService.ts
adspower-manager/frontend/src/store/: index.ts
adspower-manager/frontend/src/store/slices/: authSlice.ts  websocketSlice.ts
adspower-manager/frontend/src/types/: api.ts
adspower-manager/scripts/: deploy.sh
